edit prettierrc.json and .editorconfig

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
     "arrowParens": "always",
-    "endOfLine": "crlf",
+    "endOfLine": "lf",
+    "insertFinalNewLine": true,
     "jsxSingleQuote": false,
     "printWidth": 80,
     "semi": true,
